Update location from Basildon to Royal Tunbridge Wells

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <div class="flex flex-col justify-end items-start lg:items-end">
                 <div class="space-y-4 text-left lg:text-right">
                     <p class="font-sans text-xs tracking-widest uppercase text-stone-500">Based in</p>
-                    <p class="font-serif text-xl">Basildon, United Kingdom</p>
+                    <p class="font-serif text-xl">Royal Tunbridge Wells, United Kingdom</p>
                 </div>
             </div>
         </div>
