--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=Playfair+Display:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&family=Syne:wght@400;600;700;800&display=swap" rel="stylesheet">
     
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -15,13 +15,13 @@
         theme: {
           extend: {
             fontFamily: {
-              serif: ['Playfair Display', 'serif'],
-              sans: ['Inter', 'sans-serif'],
+              serif: ['Syne', 'sans-serif'],       
+              sans: ['Montserrat', 'sans-serif'],  
             },
             colors: {
-              alabaster: '#F9F8F6', // The Pinterest warm white
-              charcoal: '#1A1A1A',  // Softer than black
-              taupe: '#A89F91',     // Elegant accent
+              alabaster: '#F9F8F6', 
+              charcoal: '#1A1A1A',  
+              taupe: '#A89F91',     
             }
           },
         },
