Change Company Logbook text to uppercase

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="max-w-7xl mx-auto px-6 lg:px-12">
             <div class="flex justify-between items-center h-20">
                 <div class="flex-shrink-0 flex items-center">
-                   <span class="font-serif text-xl tracking-wide font-extrabold">Company Logbook.</span>
+                   <span class="font-serif text-xl tracking-wide font-extrabold uppercase">Company Logbook</span>
                 </div>
                 
                 <div class="hidden md:flex space-x-12">
