--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
         <div class="grid grid-cols-1 lg:grid-cols-12 gap-12 items-end">
             <div class="lg:col-span-8">
                 <p class="font-sans text-xs tracking-[0.3em] uppercase text-taupe mb-6">Digital Growth Consultancy</p>
-                <h1 class="font-serif text-5xl lg:text-7xl leading-[1.1] font-normal mb-8 text-charcoal">
-                    We build <span class="italic text-stone-400">intelligent</span> systems that turn quiet visitors into <span class="italic">loyal clients.</span>
-                </h1>
+                         <h1 class="font-serif text-5xl lg:text-7xl leading-[1.1] font-bold mb-8 text-charcoal">
+              Helping you develop <span class="text-stone-400">intelligent workflows</span> that work <span class="italic">whilst you sleep.</span>
+          </h1>
                 <div class="flex flex-col sm:flex-row gap-6 mt-12">
                     <a href="#contact" class="inline-block px-10 py-4 bg-charcoal text-white font-sans text-xs tracking-[0.2em] uppercase hover:bg-taupe transition-colors duration-300">
                         Start a Project
