Fix formatting in index.html

--- a/index.html
+++ b/index.html
@@ -266,6 +266,6 @@
             }
         });
     </script>
-
+<span class="hacker-text font-serif text-xl tracking-wide font-extrabold uppercase" data-value="Company Logbook">Company Logbook</span>
 </body>
 </html>
