--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             fontFamily: {
               serif: ['Syne', 'sans-serif'],       
               sans: ['Montserrat', 'sans-serif'],
-              strip: ['Marcellus', 'serif'],         /* NEW: For the side strip */
-              sig: ['Pinyon Script', 'cursive'],      /* NEW: For your signature */
+              strip: ['Marcellus', 'serif'],
+              sig: ['Pinyon Script', 'cursive'],
             },
             colors: {
               alabaster: '#F9F8F6', 
@@ -85,9 +85,9 @@
     <header class="relative pt-32 pb-20 lg:pt-48 lg:pb-32 px-6 lg:pl-28 lg:pr-12 max-w-7xl mx-auto">
         <div class="grid grid-cols-1 lg:grid-cols-12 gap-12 items-end">
             <div class="lg:col-span-8">
-                <p class="font-sans text-xs tracking-[0.3em] uppercase text-taupe mb-6">Digital Growth Consultancy</p>
+                <p class="font-sans text-xs tracking-[0.3em] uppercase text-taupe mb-6">Strategy &bull; Intelligence &bull; Scale</p>
                 <h1 class="font-serif text-5xl lg:text-7xl leading-[1.1] font-bold mb-8 text-charcoal">
-                    Helping you develop <span class="text-stone-400">intelligent workflows</span> that work <span class="italic">whilst you sleep.</span>
+                    Designing <span class="text-stone-400">algorithmic growth engines</span> that compound <span class="italic">whilst you sleep.</span>
                 </h1>
                 <div class="flex flex-col sm:flex-row gap-6 mt-12">
                     <a href="#contact" class="inline-block px-10 py-4 bg-charcoal text-white font-sans text-xs tracking-[0.2em] uppercase hover:bg-taupe transition-colors duration-300">
@@ -100,7 +100,7 @@
             </div>
             <div class="lg:col-span-4 hidden lg:block relative">
                  <div class="aspect-[3/4] overflow-hidden">
-                    <img src="https://images.unsplash.com/photo-1497215728101-856f4ea42174?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" alt="Minimal Office" class="object-cover w-full h-full opacity-90 grayscale-[20%] hover:scale-105 transition-transform duration-700">
+                    <img src="https://images.unsplash.com/photo-1486406146926-c627a92ad1ab?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" alt="Growth Architecture" class="object-cover w-full h-full opacity-90 grayscale hover:scale-105 transition-transform duration-700">
                 </div>
             </div>
         </div>
@@ -240,8 +240,10 @@
                 
                 <div class="flex flex-col justify-end items-start lg:items-end">
                     <div class="space-y-4 text-left lg:text-right">
-                        <p class="font-sans text-xs tracking-widest uppercase text-stone-400">Based in</p>
-                        <p class="font-serif text-xl">Royal Tunbridge Wells, United Kingdom</p>
+                        <div class="space-y-1">
+                            <p class="font-serif text-xl">Operating Globally</p>
+                            <p class="font-sans text-[10px] text-stone-500 tracking-widest uppercase">London &bull; New York &bull; Dubai</p>
+                        </div>
                         <div class="pt-2 border-t border-stone-600/50 inline-block lg:block">
                              <p class="font-sans text-xs text-stone-500 tracking-wider">ICO Registered: <span class="text-stone-400">Z1234567</span></p>
                         </div>
