Change image and update section headings in index.html
Updated image source and modified headings for clarity.

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             
             <div class="lg:col-span-5 hidden lg:block relative h-full">
                  <div class="aspect-[4/5] overflow-hidden rounded-sm">
-                    <img src="https://images.unsplash.com/photo-1611186871348-b1ce696e52c9?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" alt="Digital Strategy" class="object-cover w-full h-full opacity-95 hover:scale-105 transition-transform duration-700">
+                    <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" alt="Modern Analytics Dashboard" class="object-cover w-full h-full opacity-95 hover:scale-105 transition-transform duration-700">
                 </div>
             </div>
         </div>
@@ -132,14 +132,13 @@
     <section id="services" class="py-24 px-6 lg:pl-28 lg:pr-12 max-w-7xl mx-auto">
         <div class="mb-16">
              <p class="font-sans text-xs tracking-[0.3em] uppercase text-taupe mb-4">Our Expertise</p>
-             <h3 class="font-serif text-4xl lg:text-5xl mb-6">Refined Tools for<br>Modern Business.</h3>
-        </div>
+             </div>
 
         <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
             
             <div class="group bg-charcoal p-10 text-white hover:bg-stone-900 transition-all duration-300 cursor-default border border-stone-800 hover:border-taupe/50">
                 <div class="flex justify-between items-baseline mb-8">
-                    <h4 class="font-serif text-2xl group-hover:italic transition-all">Digital Strategy<br>Experts</h4>
+                    <h4 class="font-serif text-2xl group-hover:italic transition-all">Digital Marketing &<br>Strategy Experts</h4>
                     <span class="font-sans text-xs text-taupe tracking-widest">01</span>
                 </div>
                 <p class="font-sans text-stone-400 font-light text-sm leading-relaxed">
