Refactor pricing plan styles and content
Updated pricing plans and styles for better visibility and consistency.

--- a/index.html
+++ b/index.html
@@ -175,53 +175,53 @@
             
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 
-                <div class="border border-stone-800 p-8 hover:border-taupe transition-colors duration-300 bg-stone-900">
-                    <div class="h-48 mb-8 overflow-hidden bg-stone-800">
-                        <img src="https://images.unsplash.com/photo-1585675100412-40c5d2d5867a?auto=format&fit=crop&w=600&q=80" class="w-full h-full object-cover opacity-80" alt="Pen">
+                <div class="border border-stone-200 p-8 hover:border-taupe transition-colors duration-300 bg-white text-charcoal shadow-xl">
+                    <div class="h-48 mb-8 overflow-hidden bg-white">
+                        <img src="https://images.unsplash.com/photo-1585675100412-40c5d2d5867a?auto=format&fit=crop&w=800&q=80" class="w-full h-full object-cover mix-blend-multiply" alt="Pen">
                     </div>
-                    <h3 class="font-serif text-2xl mb-2 text-white">The Audit</h3>
-                    <p class="font-sans text-3xl font-bold mb-6 text-white">£2,500 <span class="text-xs font-normal text-stone-400">/ One-time</span></p>
+                    <h3 class="font-serif text-2xl mb-2 text-charcoal">The Audit</h3>
+                    <p class="font-sans text-3xl font-bold mb-6 text-charcoal">£2,500 <span class="text-xs font-normal text-stone-500">/ One-time</span></p>
                     <p class="text-xs text-stone-500 uppercase tracking-widest mb-6">Foundation</p>
-                    <ul class="space-y-3 mb-8 text-sm text-stone-400 font-light">
+                    <ul class="space-y-3 mb-8 text-sm text-stone-600 font-light">
                         <li>• Digital Presence Audit</li>
                         <li>• Competitor Analysis</li>
                         <li>• Strategy Roadmap</li>
                         <li>• UI/UX Recommendations</li>
                     </ul>
-                    <a href="#contact" class="block w-full py-3 bg-white text-charcoal text-center text-xs uppercase tracking-widest hover:bg-taupe hover:text-white transition-colors">Select Plan</a>
+                    <a href="#contact" class="block w-full py-3 bg-charcoal text-white text-center text-xs uppercase tracking-widest hover:bg-taupe transition-colors">Select Plan</a>
                 </div>
 
-                <div class="border border-stone-800 p-8 hover:border-taupe transition-colors duration-300 bg-stone-900 relative">
+                <div class="border border-stone-200 p-8 hover:border-taupe transition-colors duration-300 bg-white text-charcoal shadow-xl relative">
                     <div class="absolute top-0 right-0 bg-taupe text-white text-[10px] uppercase tracking-widest px-3 py-1">Popular</div>
-                    <div class="h-48 mb-8 overflow-hidden bg-stone-800">
-                        <img src="https://images.unsplash.com/photo-1614726365723-49cfae92782f?auto=format&fit=crop&w=600&q=80" class="w-full h-full object-cover opacity-80" alt="Sphere">
+                    <div class="h-48 mb-8 overflow-hidden bg-white">
+                        <img src="https://images.unsplash.com/photo-1541188495357-ad2db385d42d?auto=format&fit=crop&w=800&q=80" class="w-full h-full object-cover mix-blend-multiply" alt="Sphere">
                     </div>
-                    <h3 class="font-serif text-2xl mb-2 text-white">The Build</h3>
-                    <p class="font-sans text-3xl font-bold mb-6 text-white">£5,000 <span class="text-xs font-normal text-stone-400">/ Month</span></p>
+                    <h3 class="font-serif text-2xl mb-2 text-charcoal">The Build</h3>
+                    <p class="font-sans text-3xl font-bold mb-6 text-charcoal">£5,000 <span class="text-xs font-normal text-stone-500">/ Month</span></p>
                     <p class="text-xs text-stone-500 uppercase tracking-widest mb-6">Acceleration</p>
-                    <ul class="space-y-3 mb-8 text-sm text-stone-400 font-light">
+                    <ul class="space-y-3 mb-8 text-sm text-stone-600 font-light">
                         <li>• Custom Web App Development</li>
                         <li>• Automation Workflows</li>
                         <li>• Monthly Compliance Reports</li>
                         <li>• Priority Support</li>
                     </ul>
-                    <a href="#contact" class="block w-full py-3 bg-white text-charcoal text-center text-xs uppercase tracking-widest hover:bg-taupe hover:text-white transition-colors">Select Plan</a>
+                    <a href="#contact" class="block w-full py-3 bg-charcoal text-white text-center text-xs uppercase tracking-widest hover:bg-taupe transition-colors">Select Plan</a>
                 </div>
 
-                <div class="border border-stone-800 p-8 hover:border-taupe transition-colors duration-300 bg-stone-900">
-                    <div class="h-48 mb-8 overflow-hidden bg-stone-800">
-                        <img src="https://images.unsplash.com/photo-1507473883581-22965ee08424?auto=format&fit=crop&w=600&q=80" class="w-full h-full object-cover opacity-80" alt="Lamp">
+                <div class="border border-stone-200 p-8 hover:border-taupe transition-colors duration-300 bg-white text-charcoal shadow-xl">
+                    <div class="h-48 mb-8 overflow-hidden bg-white">
+                        <img src="https://images.unsplash.com/photo-1513506003013-680c3859e30d?auto=format&fit=crop&w=800&q=80" class="w-full h-full object-cover mix-blend-multiply" alt="Lamp">
                     </div>
-                    <h3 class="font-serif text-2xl mb-2 text-white">The Empire</h3>
-                    <p class="font-sans text-3xl font-bold mb-6 text-white">Custom <span class="text-xs font-normal text-stone-400">/ Bespoke</span></p>
+                    <h3 class="font-serif text-2xl mb-2 text-charcoal">The Empire</h3>
+                    <p class="font-sans text-3xl font-bold mb-6 text-charcoal">Custom <span class="text-xs font-normal text-stone-500">/ Bespoke</span></p>
                     <p class="text-xs text-stone-500 uppercase tracking-widest mb-6">Domination</p>
-                    <ul class="space-y-3 mb-8 text-sm text-stone-400 font-light">
+                    <ul class="space-y-3 mb-8 text-sm text-stone-600 font-light">
                         <li>• Full Ecosystem Design</li>
                         <li>• Enterprise Architecture</li>
                         <li>• Dedicated Growth Team</li>
                         <li>• White-label Solutions</li>
                     </ul>
-                    <a href="#contact" class="block w-full py-3 border border-stone-600 text-white text-center text-xs uppercase tracking-widest hover:bg-white hover:text-charcoal transition-colors">Enquire</a>
+                    <a href="#contact" class="block w-full py-3 bg-charcoal text-white text-center text-xs uppercase tracking-widest hover:bg-taupe transition-colors">Enquire</a>
                 </div>
 
             </div>
