Update description from 'roadmaps' to 'blueprints'

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     <span class="font-sans text-xs text-taupe tracking-widest">01</span>
                 </div>
                 <p class="font-sans text-stone-400 font-light text-sm leading-relaxed">
-                    Comprehensive roadmaps that align technology with your 10-year vision, ensuring every digital touchpoint drives equity.
+                    Comprehensive blueprints that align technology with your 10-year vision, ensuring every digital touchpoint drives equity.
                 </p>
             </div>
             
