--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
         <div class="max-w-4xl mx-auto text-center">
             <p class="font-sans text-[10px] tracking-[0.4em] uppercase text-taupe mb-6">Our Brand Vision</p>
             <h2 class="font-serif text-3xl lg:text-4xl leading-tight mb-8">
-                "True luxury is efficiency.<br>
-                <span class="italic text-taupe">We orchestrate growth.</span>"
+                "True luxury is efficiency<br>
+                <span class="italic text-taupe">We orchestrate growth</span>"
             </h2>
             <p class="font-sans text-stone-500 font-light leading-relaxed max-w-xl mx-auto">
                 We believe that a brand is defined not just by how it looks, but by how it functions. We strip away the unnecessary to reveal the essential, building a strategically orchestrated network that leverages digital connectivity to create an evolving asset—the foundation of your empire.
@@ -192,11 +192,11 @@
                 <div>
                     <p class="font-sans text-xs tracking-[0.3em] uppercase text-taupe mb-6">The Paradigm Shift</p>
                     <h2 class="font-serif text-3xl lg:text-4xl leading-tight text-white mb-6">
-                        Google is dying.<br>
-                        <span class="italic text-stone-400">The Answer Engine is rising.</span>
+                        Is Google really dying?<br>
+                        <span class="italic text-stone-400">The Answer Engine is rising</span>
                     </h2>
                     <p class="font-sans text-stone-400 font-light leading-relaxed max-w-md">
-                        The world is moving from Search to Answers. If ChatGPT, Gemini, and Perplexity don't know who you are, you don't exist. We don't just hack the algorithm; we feed the beast, turning your brand into a verified "Source of Truth."
+                        The world is moving from Search to Answers. Are you visible to generative AI? We don't just chase the algorithm; we feed the beast, turning your brand into a verified "Source of Truth."
                     </p>
                 </div>
                 <div class="flex items-end justify-start lg:justify-end">
@@ -208,8 +208,8 @@
                 <div class="bg-[#1A1A1A] border border-stone-800 p-8 hover:border-taupe/40 transition-all duration-300">
                     <p class="text-taupe text-[10px] tracking-[0.3em] uppercase mb-4">Tier 1 • Foundation</p>
                     <h3 class="font-serif text-2xl text-white mb-2">The Signal</h3>
-                    <p class="text-3xl font-light text-white mb-6">£1,500 <span class="text-xs text-stone-500">/ mo</span></p>
-                    <p class="text-xs text-stone-400 mb-6 italic">"Ensure the AI knows your name."</p>
+                    <p class="text-xl font-light text-white mb-6">Bespoke Investment</p>
+                    <p class="text-xs text-stone-400 mb-6 italic">"Ensure the AI knows your name"</p>
                     <ul class="space-y-4 text-xs text-stone-400 font-light tracking-wide mb-8">
                         <li class="flex items-start"><span class="mr-2 text-taupe">›</span> Deep Entity Audit</li>
                         <li class="flex items-start"><span class="mr-2 text-taupe">›</span> Schema "Language" Implementation</li>
@@ -223,8 +223,8 @@
                     <div class="absolute top-0 right-0 bg-taupe text-white text-[9px] uppercase tracking-widest px-3 py-1">Recommended</div>
                     <p class="text-taupe text-[10px] tracking-[0.3em] uppercase mb-4">Tier 2 • Growth</p>
                     <h3 class="font-serif text-2xl text-white mb-2">The Authority</h3>
-                    <p class="text-3xl font-light text-white mb-6">£3,500 <span class="text-xs text-stone-500">/ mo</span></p>
-                    <p class="text-xs text-stone-400 mb-6 italic">"Teach the AI you are the leader."</p>
+                    <p class="text-xl font-light text-white mb-6">Bespoke Investment</p>
+                    <p class="text-xs text-stone-400 mb-6 italic">"Teach the AI you are the leader"</p>
                     <ul class="space-y-4 text-xs text-stone-400 font-light tracking-wide mb-8">
                         <li class="flex items-start"><span class="mr-2 text-taupe">›</span> Everything in Tier 1</li>
                         <li class="flex items-start"><span class="mr-2 text-taupe">›</span> Digital PR "Feeding" (2-3 Placements)</li>
@@ -237,8 +237,8 @@
                 <div class="bg-[#1A1A1A] border border-stone-800 p-8 hover:border-taupe/40 transition-all duration-300">
                     <p class="text-taupe text-[10px] tracking-[0.3em] uppercase mb-4">Tier 3 • Dominance</p>
                     <h3 class="font-serif text-2xl text-white mb-2">The Monopoly</h3>
-                    <p class="text-3xl font-light text-white mb-6">£8,000+ <span class="text-xs text-stone-500">/ mo</span></p>
-                    <p class="text-xs text-stone-400 mb-6 italic">"Become the only logical answer."</p>
+                    <p class="text-xl font-light text-white mb-6">Bespoke Investment</p>
+                    <p class="text-xs text-stone-400 mb-6 italic">"Become the only logical answer"</p>
                     <ul class="space-y-4 text-xs text-stone-400 font-light tracking-wide mb-8">
                         <li class="flex items-start"><span class="mr-2 text-taupe">›</span> Wiki-Data & Knowledge Graph</li>
                         <li class="flex items-start"><span class="mr-2 text-taupe">›</span> Omni-Channel Video Transcripts</li>
@@ -260,8 +260,8 @@
                     <div class="h-48 mb-8 overflow-hidden bg-white">
                         <img src="pen.jpg" class="w-full h-full object-cover mix-blend-multiply" alt="Pen">
                     </div>
-                    <h3 class="font-serif text-2xl mb-2 text-charcoal">The Audit</h3>
-                    <p class="font-sans text-3xl font-bold mb-6 text-charcoal">£2,500 <span class="text-xs font-normal text-stone-500">/ One-time</span></p>
+                    <h3 class="font-serif text-2xl mb-2 text-charcoal tracking-wide">AUDIT</h3>
+                    <p class="font-sans text-xl font-bold mb-6 text-charcoal">Custom Scope</p>
                     <p class="text-xs text-stone-500 uppercase tracking-widest mb-6">Foundation</p>
                     <ul class="space-y-3 mb-8 text-sm text-stone-600 font-light">
                         <li>• Digital Presence Audit</li>
@@ -277,8 +277,8 @@
                     <div class="h-48 mb-8 overflow-hidden bg-white">
                         <img src="sphere.jpg" class="w-full h-full object-cover mix-blend-multiply" alt="Sphere">
                     </div>
-                    <h3 class="font-serif text-2xl mb-2 text-charcoal">The Build</h3>
-                    <p class="font-sans text-3xl font-bold mb-6 text-charcoal">£5,000 <span class="text-xs font-normal text-stone-500">/ Month</span></p>
+                    <h3 class="font-serif text-2xl mb-2 text-charcoal tracking-wide">BUILD</h3>
+                    <p class="font-sans text-xl font-bold mb-6 text-charcoal">Custom Scope</p>
                     <p class="text-xs text-stone-500 uppercase tracking-widest mb-6">Acceleration</p>
                     <ul class="space-y-3 mb-8 text-sm text-stone-600 font-light">
                         <li>• Custom Web App Development</li>
@@ -293,8 +293,8 @@
                     <div class="h-48 mb-8 overflow-hidden bg-white">
                         <img src="lamp.jpg" class="w-full h-full object-cover mix-blend-multiply" alt="Lamp">
                     </div>
-                    <h3 class="font-serif text-2xl mb-2 text-charcoal">The Empire</h3>
-                    <p class="font-sans text-3xl font-bold mb-6 text-charcoal">Custom <span class="text-xs font-normal text-stone-500">/ Bespoke</span></p>
+                    <h3 class="font-serif text-2xl mb-2 text-charcoal tracking-wide">SCALE</h3>
+                    <p class="font-sans text-xl font-bold mb-6 text-charcoal">Bespoke</p>
                     <p class="text-xs text-stone-500 uppercase tracking-widest mb-6">Domination</p>
                     <ul class="space-y-3 mb-8 text-sm text-stone-600 font-light">
                         <li>• Full Ecosystem Design</li>
@@ -315,7 +315,7 @@
                     <p class="font-sans text-xs tracking-[0.3em] uppercase text-taupe">Our Ecosystem</p>
                     <h2 class="font-serif text-4xl lg:text-5xl leading-tight relative z-10 text-charcoal">
                         We build our own <br>
-                        <span class="text-stone-400 italic">engines of growth.</span>
+                        <span class="text-stone-400 italic">engines of growth</span>
                     </h2>
                     <div class="pt-2">
                         <p class="font-sig text-4xl text-stone-600 transform -rotate-2 origin-left">Jade Collins</p>
@@ -407,34 +407,6 @@
             </div>
         </div>
     </footer>
-
-    <div x-data="{ show: !localStorage.getItem('cookie_consent') }" 
-         x-show="show" 
-         class="fixed bottom-0 w-full bg-white border-t border-stone-200 p-6 z-50 shadow-2xl flex flex-col md:flex-row justify-between items-center gap-4 transition-transform duration-500">
-        <div class="max-w-3xl">
-            <p class="font-serif text-lg mb-1 text-charcoal">We respect your privacy.</p>
-            <p class="font-sans text-xs text-stone-500 font-light">
-                We use cookies to ensure you get the best experience on our website. By continuing to use this site, you agree to our use of cookies in accordance with our 
-                <a href="#" class="underline hover:text-charcoal">Cookie Policy</a>.
-            </p>
-        </div>
-        <div class="flex gap-4">
-            <button @click="show = false; localStorage.setItem('cookie_consent', 'true')" class="px-8 py-3 bg-charcoal text-white text-xs uppercase tracking-widest hover:bg-stone-800 transition-colors">Accept</button>
-            <button @click="show = false" class="px-8 py-3 border border-stone-300 text-stone-500 text-xs uppercase tracking-widest hover:text-charcoal transition-colors">Decline</button>
-        </div>
-    </div>
-
-    <div id="lock-screen" class="fixed inset-0 z-[100] bg-[#1A1A1A] flex flex-col items-center justify-center text-white transition-opacity duration-500">
-        <div class="text-center space-y-8 px-6">
-            <svg class="w-12 h-12 mx-auto text-stone-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z"></path></svg>
-            <h2 class="font-serif text-3xl md:text-4xl tracking-wide">Private Access</h2>
-            <div class="flex flex-col space-y-4 w-full max-w-xs mx-auto">
-                <input type="password" id="password-input" placeholder="Enter Password" class="bg-transparent border-b border-stone-600 text-center py-3 text-xl font-serif focus:outline-none focus:border-white transition-colors placeholder-stone-600">
-                <button onclick="checkPassword()" class="bg-white text-[#1A1A1A] font-sans font-bold uppercase text-xs tracking-[0.2em] py-4 hover:bg-stone-200 transition-colors">Unlock Site</button>
-            </div>
-            <p id="error-msg" class="text-red-400 text-xs font-sans tracking-wider hidden">Incorrect Password</p>
-        </div>
-    </div>
 
     <script>
         window.addEventListener('load', () => {
