--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                         <span class="italic text-stone-400">The Answer Engine is rising</span>
                     </h2>
                     <p class="font-sans text-stone-400 font-light leading-relaxed max-w-md">
-                        The world is moving from Search to Answers. Are you visible to generative AI? We don't just chase the algorithm; we feed the beast, turning your brand into a verified "Source of Truth."
+                        The world is moving from Search to Answers. Are you visible to generative AI? We don't just chase the algorithm; we engineer the intelligence, establishing your brand as a verified "Source of Truth."
                     </p>
                 </div>
                 </div>
@@ -404,34 +404,6 @@
             </div>
         </div>
     </footer>
-
-    <div x-data="{ show: !localStorage.getItem('cookie_consent') }" 
-         x-show="show" 
-         class="fixed bottom-0 w-full bg-white border-t border-stone-200 p-6 z-50 shadow-2xl flex flex-col md:flex-row justify-between items-center gap-4 transition-transform duration-500">
-        <div class="max-w-3xl">
-            <p class="font-serif text-lg mb-1 text-charcoal">We respect your privacy</p>
-            <p class="font-sans text-xs text-stone-500 font-light">
-                We use cookies to ensure you get the best experience on our website. By continuing to use this site, you agree to our use of cookies in accordance with our 
-                <a href="#" class="underline hover:text-charcoal">Cookie Policy</a>.
-            </p>
-        </div>
-        <div class="flex gap-4">
-            <button @click="show = false; localStorage.setItem('cookie_consent', 'true')" class="px-8 py-3 bg-charcoal text-white text-xs uppercase tracking-widest hover:bg-stone-800 transition-colors">Accept</button>
-            <button @click="show = false" class="px-8 py-3 border border-stone-300 text-stone-500 text-xs uppercase tracking-widest hover:text-charcoal transition-colors">Decline</button>
-        </div>
-    </div>
-
-    <div id="lock-screen" class="fixed inset-0 z-[100] bg-[#1A1A1A] flex flex-col items-center justify-center text-white transition-opacity duration-500">
-        <div class="text-center space-y-8 px-6">
-            <svg class="w-12 h-12 mx-auto text-stone-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z"></path></svg>
-            <h2 class="font-serif text-3xl md:text-4xl tracking-wide">Private Access</h2>
-            <div class="flex flex-col space-y-4 w-full max-w-xs mx-auto">
-                <input type="password" id="password-input" placeholder="Enter Password" class="bg-transparent border-b border-stone-600 text-center py-3 text-xl font-serif focus:outline-none focus:border-white transition-colors placeholder-stone-600">
-                <button onclick="checkPassword()" class="bg-white text-[#1A1A1A] font-sans font-bold uppercase text-xs tracking-[0.2em] py-4 hover:bg-stone-200 transition-colors">Unlock Site</button>
-            </div>
-            <p id="error-msg" class="text-red-400 text-xs font-sans tracking-wider hidden">Incorrect Password</p>
-        </div>
-    </div>
 
     <script>
         window.addEventListener('load', () => {
