Update video container styles in index.html

--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
                 </div>
             </div>
             
-            <div class="lg:col-span-5 hidden lg:block relative h-full">
-                 <div class="aspect-[4/5] overflow-hidden rounded-sm relative">
+            <div class="lg:col-span-5 relative h-full mt-10 lg:mt-0">
+                 <div class="aspect-[4/5] overflow-hidden rounded-sm relative shadow-2xl lg:shadow-none">
                     <video autoplay muted loop playsinline class="object-cover w-full h-full opacity-90 mix-blend-multiply">
                         <source src="hero.mp4" type="video/mp4">
                     </video>
